--- a/app/src/main/res/layout/activity_formula_general.xml
+++ b/app/src/main/res/layout/activity_formula_general.xml
@@ -5,6 +5,7 @@
     android:id="@+id/btnregresar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/_8706326_rm251_mind_01_f"
     tools:context=".FormulaGeneral"
     tools:layout_editor_absoluteX="2dp"
     tools:layout_editor_absoluteY="57dp">
@@ -85,7 +86,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="332dp"
         android:text="INGRESE EL TERCER NUMERO:"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,7 +99,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="228dp"
         android:text="INGRESE EL SEGUNDO NUMERO:"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -112,7 +113,7 @@
         android:layout_marginEnd="100dp"
         android:text="FRORMULA GENERAL"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -125,7 +126,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="120dp"
         android:text="INGRESE EL PRIMER NUMERO:"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
