--- a/app/src/main/res/layout/activity_menu_operaciones.xml
+++ b/app/src/main/res/layout/activity_menu_operaciones.xml
@@ -1,33 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/_8706326_rm251_mind_01_f"
     tools:context=".MenuOperaciones">
-
-    <ImageView
-        android:id="@+id/gifBackground"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/lineas"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="259dp"
         android:layout_height="63dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="32dp"
         android:text="ELIJA LA OPERACION QUE DESEA REALIZAR"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +39,7 @@
         android:layout_width="0dp"
         android:layout_height="94dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="152dp"
+        android:layout_marginTop="108dp"
         android:text="NUMEROS PERFECTOS"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -81,7 +68,7 @@
         android:layout_width="0dp"
         android:layout_height="85dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="244dp"
+        android:layout_marginTop="216dp"
         android:text="FORMULA GENERAL"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="1"
@@ -93,10 +80,10 @@
         android:layout_width="202dp"
         android:layout_height="66dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="416dp"
-        android:text="Trapecio"
+        android:layout_marginTop="400dp"
+        android:text="TRAPECIO"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.285"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toEndOf="@+id/button7"
         app:layout_constraintTop_toTopOf="parent" />
@@ -106,7 +93,7 @@
         android:layout_width="200dp"
         android:layout_height="81dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="248dp"
+        android:layout_marginTop="216dp"
         android:text="OPERACIONES BASICAS"
         app:layout_constraintEnd_toStartOf="@+id/btnformulageneral"
         app:layout_constraintHorizontal_weight="1"
@@ -117,10 +104,10 @@
         android:id="@+id/btnPitagoras"
         android:layout_width="196dp"
         android:layout_height="77dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="572dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="568dp"
         android:onClick="pitagoras"
-        android:text="Pitagoras"
+        android:text="PITAGORAS"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -130,8 +117,8 @@
         android:layout_width="186dp"
         android:layout_height="66dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="416dp"
-        android:text="Area Triangulo"
+        android:layout_marginTop="400dp"
+        android:text="AREA TRIANGULO"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -140,7 +127,7 @@
         android:layout_width="198dp"
         android:layout_height="74dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="492dp"
+        android:layout_marginTop="476dp"
         android:text="NUMEROS PRIMOS"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.989"
@@ -164,7 +151,7 @@
         android:layout_width="0dp"
         android:layout_height="78dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="488dp"
+        android:layout_marginTop="476dp"
         android:text="PENTAGONO"
         app:layout_constraintEnd_toStartOf="@+id/btnNPrimos"
         app:layout_constraintHorizontal_weight="1"
@@ -175,9 +162,9 @@
         android:id="@+id/btnTrinomio"
         android:layout_width="0dp"
         android:layout_height="94dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="148dp"
-        android:text="Trinomio-Monomio"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="108dp"
+        android:text="TRINOMIO-MONOMIO"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -186,8 +173,8 @@
         android:layout_width="211dp"
         android:layout_height="79dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="332dp"
-        android:text="Operacion Factorial"
+        android:layout_marginTop="312dp"
+        android:text="OPERACION FACTORIAL"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toEndOf="@+id/btn_aldaz"
@@ -198,8 +185,8 @@
         android:layout_width="191dp"
         android:layout_height="81dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="332dp"
-        android:text="Exponenciales"
+        android:layout_marginTop="312dp"
+        android:text="EXPONENCIALES"
         app:layout_constraintEnd_toStartOf="@+id/btnJefersonY"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
