--- a/app/src/main/res/layout/activity_fibonacci.xml
+++ b/app/src/main/res/layout/activity_fibonacci.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/spiderman"
+    android:background="@drawable/_8706326_rm251_mind_01_f"
     tools:context=".FibonacciActivity">
 
     <EditText
@@ -15,9 +15,10 @@
         android:layout_marginBottom="524dp"
         android:ems="10"
         android:inputType="numberSigned"
-        android:text="..."
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="NUMERO" />
 
     <Button
         android:id="@+id/button"
@@ -34,6 +35,7 @@
         android:layout_height="421dp"
         android:layout_marginEnd="84dp"
         android:layout_marginBottom="24dp"
+        android:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -45,7 +47,8 @@
             <TextView
                 android:id="@+id/TexView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textColor="@color/white" />
 
         </LinearLayout>
     </ScrollView>
@@ -57,7 +60,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="636dp"
         android:text="FIBONACCI"
-        android:textColor="@color/design_default_color_error"
+        android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
