--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/_8706326_rm251_mind_01_f"
     tools:context=".MainActivity">
 
     <TextView
@@ -12,6 +13,7 @@
         android:layout_height="83dp"
         android:layout_marginEnd="112dp"
         android:layout_marginBottom="252dp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -21,10 +23,10 @@
         android:layout_height="56dp"
         android:layout_marginTop="336dp"
         android:layout_marginEnd="16dp"
-        android:background="#D6C0FD"
+        android:background="@color/white"
         android:ems="10"
         android:inputType="text"
-        android:textColor="#100F0F"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="C" />
@@ -37,7 +39,7 @@
         android:layout_marginEnd="72dp"
         android:text="TEOREMA DE PITAGORAS"
         android:textAlignment="center"
-        android:textColor="#121212"
+        android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +54,7 @@
         android:layout_marginEnd="28dp"
         android:text="Ingrese  Lado A"
         android:textAlignment="center"
-        android:textColor="#171616"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/txtladoA"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -66,7 +68,7 @@
         android:layout_marginEnd="28dp"
         android:text="Ingrese  Lado B"
         android:textAlignment="center"
-        android:textColor="#121111"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/txtladoB"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -80,7 +82,7 @@
         android:layout_marginEnd="24dp"
         android:text="Ingrese  Lado C"
         android:textAlignment="center"
-        android:textColor="#131313"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/txtladoC"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -91,11 +93,11 @@
         android:layout_height="59dp"
         android:layout_marginTop="176dp"
         android:layout_marginEnd="16dp"
-        android:background="#D6C0FD"
+        android:background="@color/white"
         android:ems="10"
         android:inputType="text"
         android:shadowColor="#F1EBEB"
-        android:textColor="#0B0B0B"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="A" />
@@ -106,10 +108,10 @@
         android:layout_height="60dp"
         android:layout_marginTop="256dp"
         android:layout_marginEnd="16dp"
-        android:background="#D6C0FD"
+        android:background="@color/white"
         android:ems="10"
         android:inputType="text"
-        android:textColor="#171616"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="B" />
@@ -122,7 +124,7 @@
         android:layout_marginBottom="108dp"
         android:onClick="calcula"
         android:text="CALCULAR"
-        app:backgroundTint="#571818"
+        app:backgroundTint="@color/purple_500"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -132,7 +134,7 @@
         android:layout_height="wrap_content"
         android:onClick="regresar"
         android:text="REGRESAR"
-        app:backgroundTint="#972828"
+        app:backgroundTint="@color/purple_500"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
