--- a/app/src/main/res/layout/activity_menu_operaciones.xml
+++ b/app/src/main/res/layout/activity_menu_operaciones.xml
@@ -241,10 +241,10 @@
         app:layout_constraintVertical_bias="0.571" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn_aldaz"
         android:layout_width="178dp"
         android:layout_height="78dp"
-        android:text="Button"
+        android:text="EXPONENCIALES"
         android:textColor="#03A9F4"
         android:textStyle="bold"
         app:backgroundTint="#F9FBFB"
